syntax = "proto3";
package isuxportal.proto.services.admin;
option go_package = "github.com/isucon/isucon10-portal/proto/services/admin";

import "isuxportal/resources/benchmark_job.proto";

message ListBenchmarkJobsRequest {
  // optional filter by team_id
  int64 team_id = 1;
  // return only incomplete jobs
  bool incomplete_only = 2;

  // TODO: pagination
}

message ListBenchmarkJobsResponse {
  repeated BenchmarkJob jobs = 1;
}

message EnqueueBenchmarkJobRequest {
  int64 team_id = 1;
  // target ContestantInstance id
  int64 target_id = 2;
}

message EnqueueBenchmarkJobResponse {
  BenchmarkJob job = 1;
}

message CancelBenchmarkJobRequest {
  int64 id = 1;
}

message CancelBenchmarkJobResponse {
  BenchmarkJob job = 1;
}

// Query parameter
message GetBenchmarkJobQuery {
  int64 id = 1;
}

message GetBenchmarkJobResponse {
  BenchmarkJob job = 1;
}
